# salt-podman-formula

./: .copier-answers.yml  .cruft.json  .gitlab-ci.yml  .pre-commit-config.yaml  .rubocop.yml  .salt-lint  .travis.yml  .yamllint  CODEOWNERS  FORMULA  kitchen.yml  pillar.example  pyproject.toml  release.config.js
.github/workflows/: commitlint.yml
_modules/: compose.py  podmanmod.py  user_service.py
_states/: compose.py  podman.py  user_service.py
docs/: README.rst  TOFS_pattern.rst  _README.rst.tpl  conf.py  index.rst  map.jinja.rst  pillar.rst  states.rst
podman/: clean.sls  init.sls  libmapstack.jinja  libmatchers.jinja  libsaltcli.jinja  libtofsstack.jinja  map.jinja  post-map.jinja
podman/_mapdata/: init.sls
podman/config/: clean.sls  file.sls  init.sls  selinux.sls
podman/containers/: clean.sls  init.sls
podman/containers/package/: clean.sls  init.sls  install.sls
podman/containers/service/: clean.sls  init.sls  running.sls
podman/files/default/: container.service.j2
podman/package/: clean.sls  init.sls  install.sls
podman/package/repo/: clean.sls  init.sls  install.sls
podman/package/salt/: clean.sls  init.sls  install.sls
podman/parameters/: defaults.yaml  map_jinja.yaml
podman/parameters/os/: SUSE.yaml  Ubuntu.yaml
podman/parameters/os_family/: Arch.yaml  Debian.yaml  FreeBSD.yaml  Gentoo.yaml  MacOS.yaml  OpenBSD.yaml  RedHat.yaml  Suse.yaml
podman/parameters/osarch/: 386.yaml  amd64.yaml  arm64.yaml  armv6l.yaml  armv7l.yaml  ppc64le.yaml  s390x.yaml  x86_64.yaml
podman/service/: clean.sls  init.sls  running.sls
(+38 files in other folders)
